# Sava-Browser

./: Cargo.toml  Całego.toml  README.md  install.sh
Browser/: bookmarks.js  downloads.js  history.js  index.html  lyra-ai.js  main.js  notes.js  package.json  render.js  search.js  settings.js  styles.css  tor.js  vpn.js
assetts/: main.slint  style.qss  styles.slint  welcome.css  welcome.html
backend/config/: settings.json
backend/src/: ad_blocker.cr  ai_integration.cr  api_routes.cr  email_service.cr  main.cr  shard.yaml
code/: ad_block_page.py  sava_ai.py  sava_browser.py  sava_styles.qss  sava_ui.py  style.qss
frontend/src/: main.js  package.json
frontend/src/render/: styles.css
frontend/src/renderer/: index.html
frontend/src/renderer/components/: settings-panel.html  sidebar.html  tab-bar.html
frontend/src/renderer/scripts/: adblock.js  ai.js  browser.js  downloads.js  email.js  notes.js  settings.js  streaming.js  tabs.js
install-files/: sava-browser.desktop
src/: ai_assistant.rs  bookmarks.rs  browser.rs  build.rs  history.rs  integration.rs  integrations.rs  main.rs  plugins.rs  privacy.rs  settings.rs  ui.rs
