[package]
name = "sava-browser"
version = "0.3.0"
edition = "2021"

[dependencies]
slint = "1.6"
wry = "0.24"
aes-gcm = { version = "0.10", features = ["aes"] }
keyring = "2.3"
base64 = "0.21"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.38", features = ["full"] }

# Jeśli korzystasz z oauth2, wasm, lub innych bibliotek, odkomentuj i dostosuj wersje:
# oauth2 = "4.4"
# wasm-bindgen = "0.2"

[build-dependencies]
# Slint wymaga build.rs, ale nie potrzebuje tu dodatkowych zależności.

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1
