[package]
name = "sava-browser"
version = "0.3.0"
edition = "2021"

[dependencies]
slint = "1.6"
wry = "0.24"
aes-gcm = { version = "0.10", features = ["aes"] }
keyring = "2.3"
base64 = "0.21"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
oauth2 = "4.4"
urlencoding = "2.1"
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1
